# qvoid

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.sh  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json
.claude/: techdebt.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish.yml
docs/: CLASSIFICATION.md  CONFIG.md  DATA_MODEL.md  EMBEDDING.md  INDEXING.md  OVERVIEW.md  QUERYING.md
models/: classifier.json
src/: classifier.ts  config.ts  embeddings.ts  index.ts  indexer.ts  ml-classifier.ts  parser.ts  paths.ts  query.ts  types.ts
src/cli/: qvoid.ts
src/mcp/: server.ts
src/qvoid/: classifier.py  cli.py  config.py  embeddings.py  indexer.py  models.py  paths.py
test/: classifier.test.ts  indexer.test.ts  parser.test.ts
training/: idea.txt  person.txt
