[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qvoid"
version = "0.1.0"
description = "Index, query, and dedup unresolved wikilinks across Obsidian-style vaults."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Idan Ariav", email = "idanariav@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["obsidian", "wikilinks", "zettelkasten", "markdown", "notes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=1.24",
    "sentence-transformers>=2.5",
    "tomli-w>=1.0",
]

[project.scripts]
qvoid = "qvoid.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qvoid = ["../defaults/*.toml"]
